--- a/plugin.xml
+++ b/plugin.xml
@@ -11,7 +11,9 @@
             </feature>
         </config-file>
         <config-file parent="/*" target="AndroidManifest.xml" />
-        <source-file src="src/android/gizscanqrcode.java" target-dir="src/com/getdevicename/GetDeviceInfo" />
+        <source-file src="src/android/gizscanqrcode.java" target-dir="src/com/gizscanqrcode" />
+		<framework src="src/android/gizscanqrcode.gradle" custom="true" type="gradleReference"/>
+		 <resource-file src="src/android/gizscanqrcode-release.aar" target="libs/gizscanqrcode.aar"/>
     </platform>
     <platform name="ios">
         <config-file parent="/*" target="config.xml">
