--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "jshint": "node node_modules/jshint/bin/jshint www && node node_modules/jshint/bin/jshint src && node node_modules/jshint/bin/jshint tests"
   },
   "author": "Gizwits Inc.",
-  "license": "GPL",
+  "license": "GPL-3.0",
   "engines": {
     "cordovaDependencies": {
       "3.0.0": {
@@ -33,5 +33,14 @@
     "husky": "^0.10.1",
     "jsdoc-to-markdown": "^1.2.0",
     "jshint": "^2.6.0"
-  }
+  },
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+ssh://git@github.com/gizwits/cordova-gizwits-scan-qrcode.git"
+  },
+  "bugs": {
+    "url": "https://github.com/gizwits/cordova-gizwits-scan-qrcode/issues"
+  },
+  "homepage": "https://github.com/gizwits/cordova-gizwits-scan-qrcode#readme"
 }
