--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "gizscanqrcode",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "gizscanqrcode Cordova Plugin",
   "cordova": {
-    "id": "com.gizscanqrcode",
+    "id": "com.gizscanqrcode@1.0.4",
     "platforms": [
       "android",
       "ios"
