--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<plugin id="com.gizscanqrcode" version="1.0.7" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android">
+<plugin id="com.gizscanqrcode" version="1.1.0" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android">
     <name>gizscanqrcode</name>
     <js-module name="gizscanqrcode" src="www/gizscanqrcode.js">
         <clobbers target="cordova.plugins.gizscanqrcode" />
@@ -25,8 +25,13 @@
         <config-file target="*-Info.plist" parent="NSCameraUsageDescription">
             <string>This app needs camera access</string>
         </config-file>
+        <config-file target="*-Info.plist" parent="NSPhotoLibraryUsageDescription">
+            <string>This app needs photo library access</string>
+        </config-file>
         <source-file src="src/ios/gizscanqrcode.h" />
         <source-file src="src/ios/gizscanqrcode.m" />
+        <source-file src="src/ios/GizScanQrcodeAttr.h" />
+        <source-file src="src/ios/GizScanQrcodeAttr.m" />
         <source-file src="src/ios/ScanQrcodeVC.h" />
         <source-file src="src/ios/ScanQrcodeVC.m" />
         <source-file src="src/ios/ScanQrcodeVC.xib" />
