--- a/src/android/gizscanqrcode.gradle
+++ b/src/android/gizscanqrcode.gradle
@@ -14,6 +14,7 @@ repositories{
 dependencies {
     compile 'com.android.support:support-v4:+'
     compile(name:'gizscanqrcode', ext:'aar')
+    compile 'com.jph.takephoto:takephoto_library:4.0.3'
 }
 
 android {
