--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<plugin id="gizscanqrcode" version="1.1.3" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android">
+<plugin id="gizscanqrcode" version="1.1.6" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android">
     <name>gizscanqrcode</name>
     <js-module name="gizscanqrcode" src="www/gizscanqrcode.js">
         <clobbers target="cordova.plugins.gizscanqrcode" />
@@ -40,5 +40,7 @@
         <source-file src="src/ios/images/bar_back.png" />
         <source-file src="src/ios/images/scan_window.png" />
         <source-file src="src/ios/images/scanLine.png" />
+        <source-file src="src/ios/images/flashlight_open.png" />
+        <source-file src="src/ios/images/flashlight_close.png" />
     </platform>
 </plugin>
