--- a/plugin.xml
+++ b/plugin.xml
@@ -1,5 +1,5 @@
 <?xml version='1.0' encoding='utf-8'?>
-<plugin id="gizscanqrcode" version="1.1.12" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android">
+<plugin id="gizscanqrcode" version="1.1.13" xmlns="http://apache.org/cordova/ns/plugins/1.0" xmlns:android="http://schemas.android.com/apk/res/android">
     <name>gizscanqrcode</name>
     <js-module name="gizscanqrcode" src="www/gizscanqrcode.js">
         <clobbers target="cordova.plugins.gizscanqrcode" />
@@ -12,9 +12,9 @@
         </config-file>
         <config-file parent="/*" target="AndroidManifest.xml" />
         <source-file src="src/android/gizscanqrcode.java" target-dir="src/com/gizscanqrcode" />
-		<source-file src="src/android/PermissionHelper.java"  target-dir="src/com/gizscanqrcode" />
-		<framework src="src/android/gizscanqrcode.gradle" custom="true" type="gradleReference"/>
-		<resource-file src="src/android/gizscanqrcode-release.aar" target="libs/gizscanqrcode.aar"/>
+        <source-file src="src/android/PermissionHelper.java"  target-dir="src/com/gizscanqrcode" />
+        <framework src="src/android/gizscanqrcode.gradle" custom="true" type="gradleReference"/>
+        <resource-file src="src/android/gizscanqrcode-release.aar" target="libs/gizscanqrcode.aar"/>
     </platform>
     <platform name="ios">
         <config-file parent="/*" target="config.xml">
@@ -22,11 +22,13 @@
                 <param name="ios-package" value="gizscanqrcode" />
             </feature>
         </config-file>
+        <preference name="CAMERA_USAGE_DESCRIPTION" default="This app needs camera access" />
         <config-file target="*-Info.plist" parent="NSCameraUsageDescription">
-            <string>This app needs camera access</string>
+            <string>$CAMERA_USAGE_DESCRIPTION</string>
         </config-file>
+        <preference name="PHOTO_LIBRARY_USAGE_DESCRIPTION" default="This app needs photo library access" />
         <config-file target="*-Info.plist" parent="NSPhotoLibraryUsageDescription">
-            <string>This app needs photo library access</string>
+            <string>$PHOTO_LIBRARY_USAGE_DESCRIPTION</string>
         </config-file>
         <source-file src="src/ios/gizscanqrcode.h" />
         <source-file src="src/ios/gizscanqrcode.m" />
