--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gizscanqrcode",
-  "version": "2.0.1",
-  "description": "gizscanqrcode Cordova Plugin",
+  "version": "2.0.2-beta",
+  "description": "兼容安卓13",
   "cordova": {
     "id": "com.gizscanqrcode",
     "platforms": [
