--- a/src/android/gizscanqrcode.gradle
+++ b/src/android/gizscanqrcode.gradle
@@ -14,7 +14,7 @@ repositories{
 dependencies {
     compile 'com.android.support:support-v4:+'
     compile(name:'gizscanqrcode', ext:'aar')
-    compile 'com.jph.takephoto:takephoto_library:4.0.3'
+    compile(name:'takephoto', ext:'aar')
     compile 'com.google.zxing:core:3.3.0';
     compile 'com.google.zxing:android-core:3.3.0';
 }
